// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render a Table with props 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #fff;
  border-collapse: collapse;
  color: #000;
  width: 100%;
}

.c0 th {
  text-align: inherit;
}

.c0 th,
.c0 td {
  padding: 12px;
  vertical-align: top;
}

.c0 thead {
  background-color: transparent;
}

.c0 thead th {
  vertical-align: bottom;
}

.c0 tbody tr:nth-of-type(odd) {
  background-color: #ededed;
}

.c0 caption {
  caption-side: bottom;
  color: #ccc;
  font-size: 90%;
  padding-bottom: 6px;
  padding-top: 6px;
  text-align: left;
}

<table
  class="c0"
>
  <caption>
    List of users
  </caption>
  <thead>
    <tr>
      <th
        scope="col"
      >
        #
      </th>
      <th
        scope="col"
      >
        First
      </th>
      <th
        scope="col"
      >
        Last
      </th>
      <th
        scope="col"
      >
        Handle
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        1
      </th>
      <td>
        Mark
      </td>
      <td>
        Otto
      </td>
      <td>
        @mdo
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        2
      </th>
      <td>
        Jacob
      </td>
      <td>
        Thornton
      </td>
      <td>
        @fat
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        3
      </th>
      <td>
        Larry
      </td>
      <td>
        the Bird
      </td>
      <td>
        @twitter
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should render a basic Table 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #fff;
  border-collapse: collapse;
  color: #000;
  width: 100%;
}

.c0 th {
  text-align: inherit;
}

.c0 th,
.c0 td {
  border-top: 1px solid #ccc;
  padding: 12px;
  vertical-align: top;
}

.c0 thead {
  background-color: #000;
  color: #fff;
}

.c0 thead th {
  border-bottom: 2px solid #ccc;
  vertical-align: bottom;
}

.c0 caption {
  caption-side: bottom;
  color: #ccc;
  font-size: 90%;
  padding-bottom: 6px;
  padding-top: 6px;
  text-align: left;
}

<table
  class="c0"
>
  <caption>
    List of users
  </caption>
  <thead>
    <tr>
      <th
        scope="col"
      >
        #
      </th>
      <th
        scope="col"
      >
        First
      </th>
      <th
        scope="col"
      >
        Last
      </th>
      <th
        scope="col"
      >
        Handle
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        1
      </th>
      <td>
        Mark
      </td>
      <td>
        Otto
      </td>
      <td>
        @mdo
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        2
      </th>
      <td>
        Jacob
      </td>
      <td>
        Thornton
      </td>
      <td>
        @fat
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        3
      </th>
      <td>
        Larry
      </td>
      <td>
        the Bird
      </td>
      <td>
        @twitter
      </td>
    </tr>
  </tbody>
</table>
`;
